Fix: do not override margin from column-spacing

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -8,13 +8,13 @@
     @include span-columns(6);
     @include shift(3);
 
-    margin: 4em 0;
+    margin: 4em inherit;
 
     @include media($mobile) {
       @include shift(0);
       @include span-columns(12);
 
-      margin: 1em 0;
+      margin: 1em inherit;
       padding: 0 25px;
     }
 
